# cg_tokens

./: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
base/: coingecko_parser.py
cg_tokens/: api.py  asgi.py  settings.py  urls.py  wsgi.py
tokens_app/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
tokens_app/migrations/: 0001_initial.py  0002_token__is_displayed.py
tokens_app/services/: functions.py
